--- a/tasklist/main.css
+++ b/tasklist/main.css
@@ -21,3 +21,36 @@
 .task-item a{
     cursor: pointer;
 }
+.toast-custom{
+    margin: 8px 0;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    padding: 42px 13px 11px 7px;
+    background: #e3e3e3;
+    font-size: 20px;
+    font-weight: 400;
+    border-radius: 6px;
+    overflow: hidden;
+    box-shadow: 0 2px 2px 0 rgb(0 0 0 / 14%), 0 1px 5px 0 rgb(0 0 0 / 12%), 0 3px 1px -2px rgb(0 0 0 / 20%);
+}
+.toast-custom span{
+    position: absolute;
+    width: 100%;
+    top: 0;
+    text-align: end;
+    right: 0;
+    padding-right: 8px;
+    background: #ffffff;
+}
+.toast-custom span i{
+    cursor: pointer;
+}
+.toast-container{
+    display: flex;
+    position: fixed;
+    left: 5px;
+    bottom: 5px;
+    flex-direction: column;
+}
