--- a/weatherjs/main.css
+++ b/weatherjs/main.css
@@ -15,3 +15,12 @@
 .bg-primary.main-bg.Snow{
     background-image: linear-gradient(#d7d7d7,#2fa4e7 60%,#1d9ce5);
 }
+.bg-primary.main-bg.Rain{
+    background-image: linear-gradient(#1774ff,#2fa4e7 60%,#002c46);
+}
+.bg-primary.main-bg.Clouds{
+    background-image: linear-gradient(#0089ff,#2fa4e7 60%,#afe2ff);
+}
+.bg-primary.main-bg.Clear{
+    background-image: linear-gradient(#00a2ff,#c8ebff 60%,#1d9ce5);
+}
